--- a/index.html
+++ b/index.html
@@ -66,11 +66,11 @@
     </div>
 
     <p class="game-explanation">
-      <strong class="important">How to play:</strong> Use your <strong>arrow keys</strong> to move the tiles. When two tiles with the same number touch, they <strong>merge into one!</strong> If you're top tier, you'll finish the game.
+      <strong class="important">How to play:</strong> Use your <strong>arrow keys</strong> to move the tiles. When two tiles with the same number touch, they <strong>merge into one!</strong> If you're a unicorn, you'll finish the game.
     </p>
     <hr>
     <p>
-    <strong class="important">Note:</strong> No pussies allowed.
+    <strong class="important">Note:</strong> No PE Bros allowed.
     </p>
   </div>
 
